--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -3,7 +3,7 @@ package web_user_books
 import (
 	"fmt"
 	"github.com/FilipBudzynski/book_it/internal/models"
-	"github.com/FilipBudzynski/book_it/cmd/web/tracking"
+	"github.com/FilipBudzynski/book_it/cmd/web/progress"
 )
 
 const htmxTrackingButtonId = "tracking-td-%d"
@@ -29,7 +29,7 @@ templ List(books []*models.UserBook) {
 			@UserBooksTable(books)
 		</div>
 	</div>
-	<div id="tracking-statistics"></div>
+	<div id="progress-statistics"></div>
 }
 
 templ UserBooksTable(books []*models.UserBook) {
@@ -135,7 +135,7 @@ templ Bookshelfs() {
 	</div>
 }
 
-templ TrackingCreateModal(userBook *models.UserBook) {
+templ ProgressCreateModal(userBook *models.UserBook) {
 	<form method="dialog">
 		<button
 			class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2"
@@ -177,113 +177,5 @@ templ TrackingCreateModal(userBook *models.UserBook) {
 				>Start Tracking</button>
 			</div>
 		</form>
-	</div>
-}
-
-templ TrackingStats(readingProgress *models.ReadingProgress) {
-	<div class="flex-grow place-items-center relative mb-10 overflow-auto">
-		<div class="flex flex-col items-center mx-10 md:mx-20">
-			<div class="breadcrumbs text-lg">
-				<ul>
-					<li><a>Tracking</a></li>
-					<li><a>Alicja w krainie konieczności</a></li>
-				</ul>
-			</div>
-		</div>
-		<!-- Tracking -->
-		<div class="pb-6">
-			<div class="stats shadow">
-				<div class="stat">
-					<div class="stat-figure text-primary">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							class="inline-block h-8 w-8 stroke-current"
-						>
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-							></path>
-						</svg>
-					</div>
-					<div class="stat-title">Daily Goal</div>
-					<div class="stat-value text-primary">{ fmt.Sprintf("%d", readingProgress.DailyTargetPages) }</div>
-					<div class="stat-desc">Last read: Mon 9/12/24</div>
-				</div>
-				<div class="stat">
-					<div class="stat-figure text-secondary">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							class="inline-block h-8 w-8 stroke-current"
-						>
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M13 10V3L4 14h7v7l9-11h-7z"
-							></path>
-						</svg>
-					</div>
-					<div class="stat-title">Total Pages</div>
-					<div class="stat-value text-secondary">{ fmt.Sprintf("%d", readingProgress.TotalPages) }</div>
-					<div class="stat-desc">Already read: 128</div>
-				</div>
-				<div class="stat">
-					<div class="stat-figure text-secondary">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							class="inline-block h-8 w-8 stroke-current"
-						>
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
-							></path>
-						</svg>
-					</div>
-					<div class="stat-value">{ fmt.Sprintf("%d%%", readingProgress.CurrentPage / readingProgress.TotalPages) }</div>
-					<div class="stat-title">Pages done</div>
-					<div class="stat-desc text-secondary">404 pages to read</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="flex-grow place-items-center relative mb-10 overflow-auto">
-		<div class="w-[70rem] overflow-x-auto">
-			<ul class="steps">
-				<li class="step step-primary">pages: 10</li>
-				<a href="#" class="step step-primary">pages: 12</a>
-				<li class="step step-primary">pages: 23</li>
-				<li class="step step-primary">pages: 11</li>
-				<li class="step step-primary">pages: 12</li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step"></li>
-				<li class="step ">end</li>
-			</ul>
-		</div>
 	</div>
 }
