--- a/cmd/web/progress/on_track_identificator.templ
+++ b/cmd/web/progress/on_track_identificator.templ
@@ -5,7 +5,7 @@ import "fmt"
 templ OnTrackIdentifiactor(bookid uint) {
 	<div>
 		<button
-			hx-get={ fmt.Sprintf("/tracking/%d", bookid) }
+			hx-get={ fmt.Sprintf("/progress/%d", bookid) }
 			hx-target="#progress-statistics"
 			hx-swap="innerHTML"
 			class="btn"
