--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -13,8 +13,8 @@ templ Base() {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>Book It</title>
-			//<link href="assets/css/output.css" rel="stylesheet"/>
-			//<script src="assets/js/htmx.min.js"></script>
+			<!-- <link href="assets/css/output.css" rel="stylesheet"/> -->
+			<!-- <script src="assets/js/htmx.min.js"></script> -->
 			// tailwind flowbite
 			<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css"/>
 			<script src="https://cdn.tailwindcss.com?plugins=typography"></script>
@@ -22,6 +22,7 @@ templ Base() {
 			<!-- <script src="https://unpkg.com/hyperscript.org@0.9.13"></script> -->
 			<!-- <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/> -->
 			// daisyUi
+			<script src="/static/toast/toast.js" defer></script>
 		</head>
 		<body>
 			// tailwind flowbite 
@@ -31,6 +32,7 @@ templ Base() {
 					{ children... }
 					@Loading()
 				</div>
+				<div id="toast-container" class="toast toast-start"></div>
 			</main>
 		</body>
 	</html>
