toasts and auto changing target pages

--- a/cmd/web/progress/on_track_identificator.templ
+++ b/cmd/web/progress/on_track_identificator.templ
@@ -2,7 +2,7 @@ package web_tracking
 
 import "fmt"
 
-templ OnTrackIdentifiactor(bookid uint) {
+templ TrackingButton(bookid uint) {
 	<div>
 		<button
 			hx-get={ fmt.Sprintf("/progress/%d", bookid) }
