--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -32,7 +32,7 @@ templ Base() {
 					{ children... }
 					@Loading()
 				</div>
-				<div id="toast-container" class="toast toast-start"></div>
+				<div id="toast-container" class="toast toast-start z-50"></div>
 			</main>
 		</body>
 	</html>
