--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -41,9 +41,6 @@ templ UserBooksTable(books []*models.UserBook) {
 				<th>Bookshelf</th>
 			</thead>
 			<tbody
-				hx-target="closest tr"
-				hx-swap="none"
-				hx-on="htmx:afterRequest: if (event.detail.xhr.status === 204) this.remove()"
 				id="books-container"
 			>
 				for _, book := range books {
@@ -71,7 +68,7 @@ templ UserBooksTable(books []*models.UserBook) {
 						<td>
 							<div id={ fmt.Sprintf(web_progress.HtmxTrackingButtonId, book.ID) }>
 								if book.ReadingProgress != nil {
-									@web_progress.TrackingButton(book.ID)
+									@web_progress.TrackingButton(book.ID, book.ReadingProgress.Completed)
 								} else {
 									<button
 										hx-get={ fmt.Sprintf("user-books/create_modal/%d", book.ID) }
@@ -80,7 +77,7 @@ templ UserBooksTable(books []*models.UserBook) {
 										hx-trigger="click"
 										onclick="my_modal_1.showModal()"
 										class="btn"
-									>start tracking</button>
+									>Start tracking</button>
 								}
 							</div>
 						</td>
