--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -86,8 +86,8 @@ templ UserBooksTable(books []*models.UserBook) {
 								<button
 									hx-delete={ fmt.Sprintf("/user-books/%d", book.ID) }
 									hx-confirm="Are you sure?"
-									hx-swap="none"
-									role="button"
+									hx-target="closest tr"
+									hx-swap="outerHTML swap:1s"
 									class="btn btn-sm w-full btn-outline btn-error"
 								>Remove</button>
 							</div>
@@ -98,6 +98,12 @@ templ UserBooksTable(books []*models.UserBook) {
 			<tfoot></tfoot>
 		</table>
 	</div>
+	<style>
+            tr.htmx-swapping td {
+  opacity: 0;
+  transition: opacity 1s ease-out;
+}
+            </style>
 }
 
 templ Bookshelfs() {
