--- a/cmd/web/navbar.templ
+++ b/cmd/web/navbar.templ
@@ -78,16 +78,25 @@ templ Navbar(user *models.User) {
 						hx-indicator="#loading-spinner"
 					>My Books</a>
 				</li>
+				<!-- <li> -->
+				<!-- 	<details class="z-50"> -->
+				<!-- 		<summary class="z-20">Parent</summary> -->
+				<!-- 		<ul class="p-2 w-max"> -->
+				<!-- 			<li><a>Submenu 1</a></li> -->
+				<!-- 			<li><a>Submenu 2</a></li> -->
+				<!-- 		</ul> -->
+				<!-- 	</details> -->
+				<!-- </li> -->
 				<li>
-					<details class="z-50">
-						<summary class="z-20">Parent</summary>
-						<ul class="p-2 w-max">
-							<li><a>Submenu 1</a></li>
-							<li><a>Submenu 2</a></li>
-						</ul>
-					</details>
+					<a
+						href="#"
+						hx-get="/exchange"
+						hx-target="#content-container"
+						hx-swap="innerHTML"
+						hx-push-url="true"
+						hx-indicator="#loading-spinner"
+					>Exchange</a>
 				</li>
-				<li><a>Item 3</a></li>
 			</ul>
 		</div>
 		<div class="navbar-end">
