--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -77,7 +77,7 @@ templ BooksPost(books []*models.Book, userBooks []*models.UserBook) {
 }
 
 templ BooksTable() {
-	<table class="bg-base-100 mx-10 table table-zebra table-lg">
+	<table class="bg-base-100 mx-10 table table-lg">
 		<thead></thead>
 		<tbody id="books-container"></tbody>
 		<tfoot></tfoot>
