--- a/cmd/web/exchange/landing_page.templ
+++ b/cmd/web/exchange/landing_page.templ
@@ -1,6 +1,6 @@
 package web_exchange
 
-templ List() {
+templ Landing() {
 	<div class="flex flex-col items-center mx-10 md:mx-20 pb-4">
 		<dialog id="exchange_modal" class="modal modal-lg">
 			<div class="modal-box w-11/12 max-w-5xl h-auto overflow-visible" id="htmx_modal"></div>
@@ -20,5 +20,13 @@ templ List() {
 		>
 			Create Exchange Request
 		</div>
+	</div>
+	<div class="flex flex-col items-center mx-10 md:mx-20 pb-4">
+		<div
+			id="exchanges-container"
+			hx-get="/exchange/list"
+			hx-trigger="load"
+			hx-swap="innerHTML"
+		></div>
 	</div>
 }
