matching and details table

--- a/cmd/web/exchange/list.templ
+++ b/cmd/web/exchange/list.templ
@@ -6,7 +6,7 @@ import (
 )
 
 templ List(exchanges []*models.ExchangeRequest) {
-	<div class="min-w-[60rem] max-w-[80rem] overflow-x-auto mt-10">
+	<div class="w-[80rem] overflow-x-auto mt-10">
 		<table class="bg-base-100 table table-lg">
 			<!-- head -->
 			<thead>
