--- a/cmd/web/assets/css/output.css
+++ b/cmd/web/assets/css/output.css
@@ -590,6 +590,10 @@ video {
   z-index: 1;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -603,6 +607,11 @@ video {
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-10 {
@@ -801,6 +810,10 @@ video {
   width: 70rem;
 }
 
+.w-\[80rem\] {
+  width: 80rem;
+}
+
 .w-auto {
   width: auto;
 }
@@ -814,10 +827,6 @@ video {
   width: max-content;
 }
 
-.min-w-\[60rem\] {
-  min-width: 60rem;
-}
-
 .max-w-5xl {
   max-width: 64rem;
 }
@@ -828,6 +837,10 @@ video {
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-screen-lg {
+  max-width: 1024px;
 }
 
 .flex-grow {
@@ -848,10 +861,6 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -1095,10 +1104,6 @@ video {
 
 .pb-4 {
   padding-bottom: 1rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
 }
 
 .pb-6 {
