--- a/cmd/web/assets/css/output.css
+++ b/cmd/web/assets/css/output.css
@@ -726,10 +726,6 @@ video {
   height: 2.25rem;
 }
 
-.h-\[30rem\] {
-  height: 30rem;
-}
-
 .h-auto {
   height: auto;
 }
@@ -1110,10 +1106,6 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
 .pr-3 {
   padding-right: 0.75rem;
 }
@@ -1124,6 +1116,10 @@ video {
 
 .pr-6 {
   padding-right: 1.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pt-5 {
