--- a/cmd/web/navbar.templ
+++ b/cmd/web/navbar.templ
@@ -117,7 +117,12 @@ templ Navbar(user *models.User) {
 						d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"
 					></path>
 				</svg>
-				<input type="checkbox" value="business" class="mx-2 toggle theme-controller"/>
+				<input
+					id="theme-toggle"
+					type="checkbox"
+					value="business"
+					class="mx-2 toggle theme-controller"
+				/>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					width="20"
