--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -10,8 +10,7 @@ templ List(books []*models.UserBook) {
 	<div class="flex flex-col items-center mx-10 md:mx-20">
 		<div class="breadcrumbs text-lg">
 			<ul>
-				<li><a>My Books</a></li>
-				<li><a>All</a></li>
+				<li>My Books</li>
 			</ul>
 		</div>
 	</div>
@@ -21,8 +20,8 @@ templ List(books []*models.UserBook) {
 				<div class="modal-box" id="htmx_modal"></div>
 			</dialog>
 			<!-- divider -->
-			@Bookshelfs()
-			<div class="divider divider-horizontal"></div>
+			<!-- @Bookshelfs() -->
+			<!-- <div class="divider divider-horizontal"></div> -->
 			<!-- table -->
 			@UserBooksTable(books)
 		</div>
@@ -32,7 +31,7 @@ templ List(books []*models.UserBook) {
 
 templ UserBooksTable(books []*models.UserBook) {
 	<div id="modal-content"></div>
-	<div class="flex-grow max-w-[80rem] place-items-center relative mb-10 h-[30rem] rounded-3xl overflow-auto">
+	<div class="flex-grow max-w-[80rem] place-items-center relative mb-10 rounded-3xl">
 		<table class="bg-base-100 table table-md z-1 ">
 			<thead>
 				<th></th>
